--- a/网站练习.html
+++ b/网站练习.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 	<div class="container">
+		<div class="top-menu">
+			<div class="left">产品</div>
+			<div class="center">BANG&OLUFSEN</div>
+			<div class="right">菜单</div>
+	    </div>
 		<div class="header-box">
 			<div class="header-pic-box"></div>
 			<div class="header-text-box">
@@ -31,6 +36,53 @@
 	    				<h2 class="w3">EARSET</h2>
 	    			</div>
 	    		</div>
+			</div>
+		</div>
+		<div class="title-box">
+			<h6>类别</h6>
+			<h2>我们的<br>产品系列</h2>
+		</div>
+		<div class="product-list">
+			<div class="product">
+				<h2 class="v1">无线扬声器系统</h2>
+			</div>
+			<div class="product">
+				<h2 class="v2">电视</h2>
+			</div>
+			<div class="product">
+				<h2 class="v3">扬声器</h2>
+			</div>
+			<div class="product">
+				<h2 class="v4">头戴式耳机</h2>
+			</div>
+			<div class="product">
+				<h2 class="v5">便携式蓝牙扬声器</h2>
+			</div>
+			<div class="product">
+				<h2 class="v6">音响系统</h2>
+			</div>
+		</div>
+		<div class="title-box">
+			<h6>精彩故事</h6>
+			<h2>阅读我们最新的<br>精彩故事</h2>
+		</div>
+		<div class="picture-list">
+			<div class="picture"></div>
+			<div class="picture"></div>
+			<div class="picture"></div>
+		</div>
+		<div class="story-list">
+			<div class="story">
+				<h2>群策群力，共铸精品</h2>
+				<h6>与我们一起，聆听一位概念开发师、一位<br>声学工程师和一位技术项目经理讲述这款<br>新型创意产品的创造过程。</h6>
+			</div>
+			<div class="story">
+				<h2>不同元素的精妙融合</h2>
+				<h6>哥本哈根港一台退役的装煤起重机变身风<br>格独特的私人休息寓所。</h6>
+			</div>
+			<div class="story">
+				<h2>幕后故事：5号工厂的HARMONIES</h2>
+				<h6>自从上世纪50年代中期起，Bang&Olufsen便开始采用铝材，在我们准备<br>推出一款全新的铝制产品之际，让我们带您一起了解下幕后的故事。</h6>
 			</div>
 		</div>
 	</div>
