--- a/网站练习.html
+++ b/网站练习.html
@@ -1,38 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Bang&Olufsen</title>
-	<link rel="stylesheet" href="网站练习.css">
+    <meta charset="UTF-8">
+    <title>Bang&Olufsen</title>
+    <link rel="stylesheet" href="网站练习.css">
 </head>
 <body>
-	<div class="container">
-		<div class="header-box">
-			<div class="header-pic-box"></div>
-			<div class="header-text-box">
-				<h5 class="description">BeoSound Shape</h5>
-				<h2 class="title">奇妙的墙上音乐</h2>
-				<h2 class="small-desc">爱音乐。也享受沉静。为原创设计喝彩。</h2>
-				<div class="kuai">
-		    		<h5 class="button">深入了解 BEOSOUND SHAPE</h5>
-		    	</div>
-		    </div>
-	    </div>
-	    <div class="bottom">
-	    	<div class="liebiao">
-	    		<div class="squ">
-	    			<div class="p1">
-	    				<h2 class="w1">BEOVISION ECLIPSE</h2>
-	    			</div>
-	    			<div class="p2">
-	    				<h2 class="w2">BEOPLAY P6</h2>
-	    			</div> 
-	    			<div class="p3">
-	    				<h2 class="w3">EARSET</h2>
-	    			</div>
-	    		</div>
-			</div>
-		</div>
-	</div>
+<div class="container">
+    <div class="top-menu">
+        <div class="left1">产品</div>
+        <div class="center">BANG&OLUFSEN</div>
+        <div class="right1">菜单</div>
+    </div>
+    <div class="header-box">
+        <div class="header-pic-box"></div>
+        <div class="header-text-box">
+            <h5 class="description">BeoSound Shape</h5>
+            <h2 class="title">奇妙的墙上音乐</h2>
+            <h2 class="small-desc">爱音乐。也享受沉静。为原创设计喝彩。</h2>
+            <div class="kuai">
+                <h5 class="button">深入了解 BEOSOUND SHAPE</h5>
+            </div>
+        </div>
+    </div>
+    <div class="bottom">
+        <div class="liebiao">
+            <div class="squ">
+                <div class="p1">
+                    <h2 class="w1">BEOVISION ECLIPSE</h2>
+                </div>
+                <div class="p2">
+                    <h2 class="w2">BEOPLAY P6</h2>
+                </div>
+                <div class="p3">
+                    <h2 class="w3">EARSET</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="title-box">
+        <h6>类别</h6>
+        <h2>我们的<br>产品系列</h2>
+    </div>
+    <div class="product-list">
+        <div class="product">
+            <h2 class="v1">无线扬声器系统</h2>
+        </div>
+        <div class="product">
+            <h2 class="v2">电视</h2>
+        </div>
+        <div class="product">
+            <h2 class="v3">扬声器</h2>
+        </div>
+        <div class="product">
+            <h2 class="v4">头戴式耳机</h2>
+        </div>
+        <div class="product">
+            <h2 class="v5">便携式蓝牙扬声器</h2>
+        </div>
+        <div class="product">
+            <h2 class="v6">音响系统</h2>
+        </div>
+    </div>
+    <div class="title-box">
+        <h6>精彩故事</h6>
+        <h2>阅读我们最新的<br>精彩故事</h2>
+    </div>
+    <div class="picture-list">
+        <div class="picture"></div>
+        <div class="picture"></div>
+        <div class="picture"></div>
+    </div>
+    <div class="story-list">
+        <div class="story">
+            <h2>群策群力，共铸精品</h2>
+            <h6>与我们一起，聆听一位概念开发师、一位声学工程师和一位技术项目经理讲述这款新型创意产品的创造过程。</h6>
+        </div>
+        <div class="story">
+            <h2>不同元素的精妙融合</h2>
+            <h6>哥本哈根港一台退役的装煤起重机变身风格独特的私人休息寓所。</h6>
+        </div>
+        <div class="story">
+            <h2>幕后故事：5号工厂的HARMONIES</h2>
+            <h6>自从上世纪50年代中期起，Bang&Olufsen便开始采用铝材，在我们准备推出一款全新的铝制产品之际，让我们带您一起了解下幕后的故事。</h6>
+        </div>
+    </div>
+    <div class="info-box">
+        <div class="info-item">
+            <div class="icon"></div>
+            <h5>新闻通讯</h5>
+            <h6>想要获得最新新闻、提示与优惠信息吗？</h6>
+            <input type="text" placeholder="电子邮箱地址">
+            <div class="button">注册</div>
+        </div>
+        <div class="info-item">
+            <div class="icon"></div>
+            <h5>查找门店</h5>
+            <h6>不要再幻想，开始体验吧。欣赏、聆听和感受品牌意欲传达的完整体验</h6>
+            <div class="button search">搜索</div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="left">
+            <a href="">语言:CHINESE</a>
+        </div>
+        <div class="right">
+            <a href="">隐私政策</a>
+            <a href="">Terms of use</a>
+            <a href="">Cookie</a>
+            <a href="">新闻</a>
+            <a href="">投资商</a>
+            <a href="">企业网站</a>
+            <a href="">成为零售商</a>
+            <a href="">Beoplay.com</a>
+            <a href="">沪ICP备13009547号-2</a>
+            <a href="">沪ICP备13009547号-3</a>
+            <a href="">© Bang & Olufsen 2018</a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
